# sf-sui-extractor

./: Build.md  Cargo.toml  Cross.toml  README.md  build.rs
operations/: x86_64_dockerfile
proto/: checkpoint.proto
src/: args.rs  checkpoint_handler.rs  convert.rs  lib.rs  logger.rs  main.rs  process_manager.rs  runtime.rs  sui_node.rs
src/convert/: checkpoint.rs  common.rs  display_update.rs  execution_status.rs  mod.rs  object.rs  sui_effects.rs  sui_event.rs  sui_gas_data.rs  sui_object.rs  sui_object_data.rs  sui_tx_block.rs  sui_tx_block_kind.rs  tx.rs  tx_object_change.rs
src/pb/: mod.rs  sui.checkpoint.v1.rs
src/sui/: mod.rs  module_resolver.rs  sui_node.rs  sui_store.rs
sui_config/: full_node.yaml
tests/: integration_test.rs
