[package]
name = "sui-sf-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1"
backoff = { version = "0.4", features = ["futures", "futures-core", "pin-project-lite", "tokio", "tokio_1"] }
base64 = "0.20.0"
clap = { version = "4.2.7", features = ["derive"] }
eyre = "0.6.8"
env_logger = "0.10.0"
futures = "0.3.23"
hex = "0.4"
jsonrpsee = { version = "0.16.2", features = ["full"] }
log = "0.4.17"
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sui-json-rpc = { git = "https://github.com/ticketland-io/sui", rev = "4008bac" }
sui-json-rpc-types = { git = "https://github.com/ticketland-io/sui", rev = "4008bac" }
sui-indexer = { git = "https://github.com/ticketland-io/sui", rev = "4008bac" }
sui-types = { git = "https://github.com/ticketland-io/sui", rev = "4008bac" }
sui-json = { git = "https://github.com/ticketland-io/sui", rev = "4008bac" }
tokio = { version = "1.27.0", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }

[profile.release]
lto = true
debug = false
opt-level = 3
strip = true
