[package]
name = "sui-sf-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
backoff = { version = "0.4", features = ["futures", "futures-core", "pin-project-lite", "tokio", "tokio_1"] }
base58 = "0.2"
base64 = "0.20.0"
ctrlc = { version = "3.0", features = ["termination"] }
clap = { version = "4.2.7", features = ["derive"] }
eyre = "0.6.8"
env_logger = "0.10.0"
futures = "0.3.23"
hex = "0.4"
log = "0.4.17"
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
mysten-metrics = { git = "https://github.com/apocentre/sui", branch = "feat/sf_indexer" }
move-core-types = { git = "https://github.com/apocentre/sui", branch = "feat/sf_indexer" }
move-bytecode-utils = { git = "https://github.com/apocentre/sui", branch = "feat/sf_indexer" }
sui-json-rpc = { git = "https://github.com/apocentre/sui", branch = "feat/sf_indexer" }
sui-rest-api = { git = "https://github.com/apocentre/sui", branch = "feat/sf_indexer" }
sui-json-rpc-types = { git = "https://github.com/apocentre/sui", branch = "feat/sf_indexer" }
sui-indexer = { git = "https://github.com/apocentre/sui", branch = "feat/sf_indexer" }
sui-types = { git = "https://github.com/apocentre/sui", branch = "feat/sf_indexer" }
sui-json = { git = "https://github.com/apocentre/sui", branch = "feat/sf_indexer" }
tokio = { version = "1.27.0", features = ["full"] }
prometheus = "0.13"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }

[profile.release]
lto = true
debug = false
opt-level = 3
strip = true
